tests/paczka1/fuzzy1/31844476.err
Error in line 1: 3TOmhLaPs A643 46,4
Error in line 3: 2SI5aWOw7 A890 36,3
Error in line 6: 3TOmhLaPs A79 10,4
Error in line 9: 3TOmhLaPs S521 94,1
Error in line 10: 3TOmhLaPs A890 54,1
Error in line 8: 2SI5aWOw7 S521 85,3
Error in line 15: kD21WH8ax A890 56,0
Error in line 23: Y4bFfbCmCMA A643 394,7
Error in line 37: veSrp6 A643 121,3
